tests/good/tests/bad/testSyntaxMissingDeclValue.grc
// Error: Expected expression after ':='
x := 